
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef enum ng_parse_token { ____Placeholder_ng_parse_token } ng_parse_token ;


 int M_NETGRAPH_PARSE ;
 int T_EOF ;
 int T_EQUALS ;
 int T_ERROR ;
 int T_LBRACE ;
 int T_LBRACKET ;
 int T_RBRACE ;
 int T_RBRACKET ;
 int T_STRING ;
 int T_WORD ;
 int free (char*,int ) ;
 scalar_t__ isspace (char const) ;
 char* ng_get_string_token (char const*,int*,int*,int *) ;

enum ng_parse_token
ng_parse_get_token(const char *s, int *startp, int *lenp)
{
 char *t;
 int i;

 while (isspace(s[*startp]))
  (*startp)++;
 switch (s[*startp]) {
 case '\0':
  *lenp = 0;
  return T_EOF;
 case '{':
  *lenp = 1;
  return T_LBRACE;
 case '}':
  *lenp = 1;
  return T_RBRACE;
 case '[':
  *lenp = 1;
  return T_LBRACKET;
 case ']':
  *lenp = 1;
  return T_RBRACKET;
 case '=':
  *lenp = 1;
  return T_EQUALS;
 case '"':
  if ((t = ng_get_string_token(s, startp, lenp, ((void*)0))) == ((void*)0))
   return T_ERROR;
  free(t, M_NETGRAPH_PARSE);
  return T_STRING;
 default:
  for (i = *startp + 1; s[i] != '\0' && !isspace(s[i])
      && s[i] != '{' && s[i] != '}' && s[i] != '['
      && s[i] != ']' && s[i] != '=' && s[i] != '"'; i++)
   ;
  *lenp = i - *startp;
  return T_WORD;
 }
}
